--- a/app/view/profile.html
+++ b/app/view/profile.html
@@ -774,7 +774,7 @@
                 var uploadContent = `<div class="profile-head-box">
                     <h5>点击修改头像</h5>
                     <div class="profile-head-box-inner"><img class="profile-head" alt="140x140" src="{{user.pic}}" data-holder-rendered="true"></div>
-                <div class="profile-action-confirm">确认修改</div>
+                <div class="profile-action-confirm" id="change-head">确认修改</div>
             </div>`
 
                 $(document).delegate('.profile-action','click',function(){
@@ -804,7 +804,7 @@
 
                 });
 
-                $(document).delegate('.profile-action-confirm','click',function(){
+                $(document).delegate('#change-head','click',function(){
                     $.ajax({
                         url:'/user',
                         type:'PUT', //GET
@@ -837,81 +837,6 @@
                                         <div class="input-group">
                                             <div class="input-group-addon">地区</div>
                                             <select name="type" class="form-control" id="country" data-address="{{address.country}}">
-                                                        <option value="KP">Korea, North</option>
-                                                        <option value="PH">Philippines</option>
-                                                        <option value="MY">Malaysia</option>
-                                                        <option value="TH">Thailand</option>
-                                                        <option value="SG">Singapore</option>
-                                                        <option value="ID">Indonesia</option>
-                                                        <option value="VN">Vietnam</option>
-                                                        <option value="AU">Australia</option>
-                                                        <option value="PG">Papua New Guinea</option>
-                                                        <option value="JP">Japan</option>
-                                                        <option value="NZ">New Zealand</option>
-                                                        <option value="BN">Brunei</option>
-                                                        <option value="US">United States</option>
-                                                        <option value="IE">Ireland</option>
-                                                        <option value="AT">Austria</option>
-                                                        <option value="BE">Belgium</option>
-                                                        <option value="DK">Denmark</option>
-                                                        <option value="DE">Germany</option>
-                                                        <option value="FR">France</option>
-                                                        <option value="FJ">Fiji</option>
-                                                        <option value="FI">Finland</option>
-                                                        <option value="CA">Canada</option>
-                                                        <option value="NL">Netherlands</option>
-                                                        <option value="LU">Luxembourg</option>
-                                                        <option value="MT">Malta</option>
-                                                        <option value="NO">Norway</option>
-                                                        <option value="PT">Portugal</option>
-                                                        <option value="SE">Sweden</option>
-                                                        <option value="CH">Switzerland</option>
-                                                        <option value="ES">Spain</option>
-                                                        <option value="GB">United Kingdom</option>
-                                                        <option value="IT">Italy</option>
-                                                        <option value="BD">Bangladesh</option>
-                                                        <option value="MM">Myanmar</option>
-                                                        <option value="NP">Nepal</option>
-                                                        <option value="LK">Sri Lanka</option>
-                                                        <option value="TR">Turkey</option>
-                                                        <option value="GR">Greece</option>
-                                                        <option value="IN">India</option>
-                                                        <option value="GI">Gibraltar</option>
-                                                        <option value="AR">Argentina</option>
-                                                        <option value="AE">United Arab Emirates</option>
-                                                        <option value="OM">Oman</option>
-                                                        <option value="EG">Egypt</option>
-                                                        <option value="BB">Barbados</option>
-                                                        <option value="BS">Bahamas</option>
-                                                        <option value="PY">Paraguay</option>
-                                                        <option value="BH">Bahrain</option>
-                                                        <option value="PA">Panama</option>
-                                                        <option value="BR">Brazil</option>
-                                                        <option value="GD">Grenada</option>
-                                                        <option value="CU">Cuba</option>
-                                                        <option value="HN">Honduras</option>
-                                                        <option value="KW">Kuwait</option>
-                                                        <option value="PE">Peru</option>
-                                                        <option value="QA">Qatar</option>
-                                                        <option value="MX">Mexico</option>
-                                                        <option value="SV">El Salvador</option>
-                                                        <option value="TT">Trinidad and Tobago</option>
-                                                        <option value="JM">Jamaica</option>
-                                                        <option value="CY">Cyprus</option>
-                                                        <option value="SA">Saudi Arabia</option>
-                                                        <option value="IL">Israel</option>
-                                                        <option value="JO">Jordan</option>
-                                                        <option value="DZ">Algeria</option>
-                                                        <option value="AZ">Azerbaijan</option>
-                                                        <option value="ET">Ethiopia</option>
-                                                        <option value="CL">Chile</option>
-                                                        <option value="AL">Albania</option>
-                                                        <option value="EE">Estonia</option>
-                                                        <option value="AD">Andorra</option>
-                                                        <option value="AO">Angola</option>
-                                                        <option value="AI">Anguilla</option>
-                                                        <option value="AW">Aruba</option>
-                                            </select>
                                             </select>
                                         </div>
                                     </div>
@@ -1007,6 +932,8 @@
                 });
 
 
+var pro = ["北京","天津","上海","重庆","河北","山西","辽宁","吉林","黑龙江","江苏","浙江","安徽","福建","江西","山东","河南","湖北","湖南","广东","海南","四川","贵州","云南","陕西","甘肃","青海","内蒙古","广西","西藏","宁夏","新疆","香港","澳门","台湾"];
+
                 $(document).delegate('.address-list-status','click',function(){
                     var self = this;
                     $.ajax({
@@ -1101,6 +1028,13 @@
                                             $('#country').val('');
                                             $('#confirm-address').attr('type','add');
                                             $('#confirm-address').attr('data-addressid','');
+
+                                            for(var i=0;i<pro.length;i++){
+                                                $option=$("<option/>")
+                                                $option.attr("value",pro[i]);
+                                                $option.text(pro[i]);
+                                                $("#country").append($option);
+                                            }
                                 },
                                 end: function(layero, i){
                                 }
@@ -1172,7 +1106,13 @@
                                         $('#contact_phone').val(data.address.contact_phone);
                                         $('#confirm-address').attr('type','modify');
                                         $('#confirm-address').attr('data-addressid',data.address.id);
-                                        $("#country").val(data.address.country);
+                                            for(var i=0;i<pro.length;i++){
+                                                $option=$("<option/>")
+                                                $option.attr("value",pro[i]);
+                                                $option.text(pro[i]);
+                                                $("#country").append($option);
+                                            }
+                                            $("#country").val(data.address.country);
                                     },
                                     end: function(layero, i){
                                     }
