--- a/app/view/admin/editor-project.html
+++ b/app/view/admin/editor-project.html
@@ -96,7 +96,7 @@
 		//  - About Allowed Content: http://docs.ckeditor.com/#!/guide/dev_allowed_content_rules
 		extraAllowedContent: 'img[width,height,align]',
 		// Enabling extra plugins, available in the full-all preset: http://ckeditor.com/presets-all
-		extraPlugins: 'lineheight,embed,tableresize,html5video,widget,widgetselection,clipboard,lineutils',
+		extraPlugins: 'lineheight,embed,tableresize,widget,widgetselection,clipboard,lineutils',
 		/*********************** File management support ***********************/
 		// In order to turn on support for file uploads, CKEditor has to be configured to use some server side
 		// solution with file upload/management capabilities, like for example CKFinder.
