--- a/app/view/home.html
+++ b/app/view/home.html
@@ -29,7 +29,7 @@
         width:10%;
     }
     .carousel-control:hover span{  
-        display: block
+        display: block!important
     }
     .carousel-control span{  
         display: none!important
