--- a/app/view/_layout.html
+++ b/app/view/_layout.html
@@ -71,19 +71,19 @@
     margin-right: 8px;
         }
         #link-list-1{
-            background-image:url('public/images/f1.png')
+            background-image:url('/public/images/f1.png')
         }
         #link-list-2{
-            background-image:url('public/images/f2.png')
+            background-image:url('/public/images/f2.png')
         }
         #link-list-3{
-            background-image:url('public/images/f3.png')
+            background-image:url('/public/images/f3.png')
         }
         #link-list-4{
-            background-image:url('public/images/f4.png')
+            background-image:url('/public/images/f4.png')
         }
         #link-list-5{
-            background-image:url('public/images/f5.png')
+            background-image:url('/public/images/f5.png')
         }
     </style>
 
@@ -193,7 +193,7 @@ font-size: 18px;
 #maskline{
     position: absolute;
     top: 0;
-    right: 88px;
+    left: 0px;
     transition: 1s all;
     height: 35px;
     background: #d1cdc4;
@@ -201,7 +201,7 @@ font-size: 18px;
     width: 0;
 }
 #maskline.extend{
-    width:1500px;
+    width: 93%;
 }
 </style>
 <script type="text/javascript" src="/public/js/plugins/layer.js"></script>
