--- a/app/view/home.html
+++ b/app/view/home.html
@@ -23,6 +23,9 @@
         height: 56px;
         font-size: 24px;
     }
+    .carousel-control span{
+        transform: translateY(-50%);
+    }
     .carousel-control{
         background: none!important;
         opacity: 1!important;
@@ -77,7 +80,7 @@
 
 <div class="container" id="fullpage">
 
-<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+<div id="carousel-example-generic" class="carousel slide" data-ride="carousel" data-pause="null">
       <ol class="carousel-indicators">
             {% for pic,index in main_pics %}
             <li data-target="#carousel-example-generic" data-slide-to="{{index}}" class=""></li>
