--- a/app/view/cart.html
+++ b/app/view/cart.html
@@ -250,9 +250,9 @@
     <div class="cart-box">
         <h4>TOTAL</h4>
         <ul class="price-list">
-            <li>价格：<span id="price">{{total}}</span></li>
-            <li>运费：<span id="delivery"></span></li>
-            <li>总计：<span id="total"></span></li>            
+            <li>PRICE：<span id="price">{{total}}</span></li>
+            <li>SHIPPING FEE：<span id="delivery"></span></li>
+            <li>TOTAL：<span id="total"></span></li>            
         </ul>
     </div>
 
