--- a/app/view/cart.html
+++ b/app/view/cart.html
@@ -58,6 +58,7 @@
     text-align: right;
     }
     .cart-box{
+        position: relative;
         width: 820px;
     margin: auto;
     padding: 20px 70px;
@@ -104,6 +105,18 @@
         color:black;
         cursor: pointer
     }
+    .address-button.address-left {
+        left: 22px;
+    }
+    .address-button {
+        position: absolute;
+        top: 116px;
+        cursor: pointer;
+        font-size: 38px;
+    }
+    .address-button.address-right {
+        right: 20px;
+    }
 </style>
 <div class="container" id="cart-container">
     {% if goods.length !==0 %}
@@ -128,7 +141,7 @@
                 <div class="col-md-6">COLOR</div>
                 <div class="col-md-6">
                     <ul class="color-list">
-                        <li style="background:{{good.material}}"></li>       
+                        <li style="background:{{good.material}}"></li>
                     </ul>
                 </div>
             </div>
@@ -246,6 +259,10 @@
                 <input type="text" class="form-control" aria-label="..." value="{{address.contact_email}}" id="email" placeholder="EMAIL">
             </div><!-- /.col-lg-6 -->
         </div><!-- /.row -->
+
+        <div class="address-button address-right">&gt</div>
+        <div class="address-button address-left">&lt</div>
+        <textarea id="address-list" style="display:none" name="" id="" cols="30" rows="10">{{addressList | dump}}</textarea>   
     </div>
     <div class="cart-box">
         <h4>TOTAL</h4>
@@ -256,15 +273,7 @@
         </ul>
     </div>
 
-    <div class="cart-box">
-        <h4>PAYMENT</h4>
-        <ul class="pay-type-list">
-            <li></li>
-            <li></li>
-        </ul>
-    </div>
-    <input type="hidden" value="{{ ctx.csrf | safe }}" id="_csrf">
-                
+    <input type="hidden" value="{{ ctx.csrf | safe }}" id="_csrf">  
     <div id="place-box">
         <button class="btn" id="place-order" disabled>place order</button>
     </div>
@@ -285,6 +294,31 @@
 {% block script %}
 
 <script>
+
+var addressList = JSON.parse($('#address-list').val());
+var addressIndex = 0;
+
+$(document).delegate('.address-right', 'click', function(){
+    addressIndex += 1;
+    if(addressIndex > addressList.length -1){
+        addressIndex = 0
+    }
+    showAddress(addressIndex);
+});
+$(document).delegate('.address-left', 'click', function(){
+    if(addressIndex == 0){
+        addressIndex = addressList.length -1;
+    }
+    showAddress(addressIndex);
+});
+
+function showAddress(index){
+    let address = addressList[index];
+    $('#country').val(address.country);
+    $('#address').val(address.address);
+    $('#postcode').val(address.postcode);
+}
+
 
 if($(".cart-box").attr('data-cart')!=='none'){
 
