--- a/app/view/profile.html
+++ b/app/view/profile.html
@@ -167,7 +167,7 @@
                         <button id="confirm-modify" type="button" class="btn btn-default">SUBMIT</button>
                     </div>
                     <div class="col-xs-3">
-                        <div class="profile-action">CHANGE PASSWORD &gt&gt</div>
+                        <div class="profile-action change-password">CHANGE PASSWORD &gt&gt</div>
                     </div>
 
                 </div>
@@ -350,7 +350,7 @@
             font-size: 14px;
             margin-bottom:14px;
         }
-        #confirm-address{
+        .confirm-btn{
                 width: 140px;
                 height: 30px;
                 line-height: 30px;
@@ -1236,6 +1236,92 @@
 
 
 
+                var passwordContent = `<div id="address-box">
+                    <h3 class="profile-title">CHANGE PASSWORD</h3>
+                    <div class="row profile-input">
+                        <div class="col-xs-12">
+                            <div class="input-group">
+                                <div class="input-group-addon">OLD PASSWORD</div>
+                                <input type="text" class="form-control" id="password-from" placeholder="">
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row profile-input">
+                        <div class="col-xs-12">
+                            <div class="input-group">
+                                <div class="input-group-addon">NEW PASSWORD</div>
+                                <input type="text" class="form-control" id="password-to" placeholder="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row profile-input">
+                            <div class="col-xs-12">
+                                    <div class="input-group">
+                                        <div class="input-group-addon">CONFIRM PASSWORD</div>
+                                        <input type="text" class="form-control" id="password-to-confirm" placeholder="">
+                                    </div>
+                                </div>
+                        </div>
+                    <div class="row profile-input">
+                        <div class="col-xs-12">
+                            <button class="btn confirm-btn" id="confirm-password">CONFIRM</button>
+                        </div>
+                    </div>
+            </div>`
+
+            $(document).delegate('.change-password','click',function(){
+                layer.open({
+                    title: false,
+                    type: 1,
+                    shadeClose: true,
+                    closeBtn:1,
+                    shade: 0.8,
+                    area:['819px','388px'],
+                    content: passwordContent,
+                    success: function(layero, i){
+                                $('#password-from').val('');
+                                $('#password-to').val('');
+                                $('#password-to-confirm').val('');
+                    },
+                    end: function(layero, i){
+                    }
+                });                         
+    });
+
+    $(document).delegate('#confirm-password','click',function(){
+        var passwordFrom = $('#password-from').val();
+        var passwordTo = $('#password-to').val();
+        var passwordToConfirm = $('#password-to-confirm').val();
+                            if(passwordTo!==passwordToConfirm){
+                                alert('新密码和确认新密码不一致');
+                                return
+                            }
+                            $.ajax({
+                                url:'/changepassword',
+                                type:'POST', //GET
+                                async:false,    //或false,是否异步
+                                data:{
+                                    passwordFrom:passwordFrom,
+                                    passwordTo:passwordTo,
+                                    _csrf:$('#_csrf').val()
+                                },
+                                timeout:300,    //超时时间
+                                dataType:'json',    //返回的数据格式：json/xml/html/script/jsonp/text
+                                beforeSend:function(xhr){
+                                    // console.log(xhr)
+                                    // console.log('发送前')
+                                },
+                                success:function(data){
+                                    if(data.success ==='false'){
+                                        alert(data.msg);
+                                    }else{
+                                        alert('修改成功!');
+                                    }
+                                    location.reload();
+                                }
+                            });
+                        });
 
 </script>
 {% endblock %}
