--- a/app/view/cart.html
+++ b/app/view/cart.html
@@ -238,7 +238,7 @@
         </div><!-- /.row -->
         <div class="row">
             <div class="col-lg-8">
-                <input type="text" class="form-control" aria-label="..." value="{{address.address}}" id="address" placeholder="COUNTRY">
+                <input type="text" class="form-control" aria-label="..." value="{{address.address}}" id="address" placeholder="ADDRESS">
             </div><!-- /.col-lg-6 -->
             <div class="col-lg-4">
                 <input type="text" class="form-control" aria-label="..." value="{{address.postcode}}" id="postcode" placeholder="POSTCODE">
