--- a/app/view/_layout.html
+++ b/app/view/_layout.html
@@ -163,14 +163,14 @@ font-size: 18px;
     visibility: visible
 }
 #login-box li:first-child a:before{
-    content:'欢迎您回来';
+    content:'welcome back';
     left: -4px;
 }
 #login-box li:last-child{
     float: right
 }
 #login-box li:last-child a:before{
-    content:'欢迎您加入';
+    content:'welcome join';
     left: 70px;
 }
 #login-box li.active:first-child a{
