--- a/app/view/component/nav.html
+++ b/app/view/component/nav.html
@@ -48,7 +48,7 @@
                     </a>
                         <div id="login-status-box">
                             <h3 id="welcome">HELLO: </h3>
-                            <a class="btn" href="/logout">退出</a>
+                            <a class="btn" href="/logout">Logout</a>
                         </div>
                 </li>
                 
