--- a/app/view/_layout.html
+++ b/app/view/_layout.html
@@ -244,28 +244,28 @@ font-size: 18px;
                         <div role="tabpanel" class="tab-pane active" id="home">
                             <form>
                                 <div class="form-group">
-                                    <input type="email" class="form-control" id="name" placeholder="帐号/手机号">
+                                    <input type="email" class="form-control" id="name" placeholder="account/phone">
                                 </div>
                                 <div class="form-group">
-                                    <input type="password" class="form-control" id="password" placeholder="密码">
+                                    <input type="password" class="form-control" id="password" placeholder="password">
                                 </div>
                                 <input type="hidden" value="{{ ctx.csrf | safe }}" id="_csrf">
-                                <button type="button" id="login" class="btn btn-default">登录</button>
+                                <button type="button" id="login" class="btn btn-default">Login</button>
                             </form>
                         
                         </div>
                         <div role="tabpanel" class="tab-pane" id="profile">
                             <form>
                                 <div class="form-group">
-                                    <input type="email" class="form-control" id="nameInput" placeholder="帐号/手机">
+                                    <input type="email" class="form-control" id="nameInput" placeholder="account/phone">
                                 </div>
                                 <div class="form-group">
-                                    <input type="email" class="form-control" id="passwordInput" placeholder="密码">
+                                    <input type="email" class="form-control" id="passwordInput" placeholder="password">
                                 </div>
                                 <div class="form-group">
-                                    <input type="password" class="form-control" id="passwordInputConfirm" placeholder="确认密码">
+                                    <input type="password" class="form-control" id="passwordInputConfirm" placeholder="confirm password">
                                 </div>
-                                <button type="button" id="registry" class="btn btn-default">注册</button>
+                                <button type="button" id="registry" class="btn btn-default">Register</button>
                             </form>
                         </div>
                     </div>
