--- a/app/view/admin/editor-bill.html
+++ b/app/view/admin/editor-bill.html
@@ -271,7 +271,7 @@
                             if(data.success ===false){
                                 alert('修改失败');
                             }else{
-                                alert('修改成功');
+                                alert('bill updated');
                             }
                         }
                     });
